fix:added extra validation
