# routes/adminRoutes.js
@@ -1,9 +1,9 @@
 const express = require('express');
-const { createCourse, createExam, assignCourseToMember, registerMember, getAllMembers, getAllCourses, getAllExams } = require('../controllers/adminController');
+const { createCourse, createExam, assignCourseToMember, registerMember, getAllMembers, getAllCourses, getAllExams, getExamResult } = require('../controllers/adminController');
 const { authorizeUser } = require('../middleware/authMiddleware');
 const {  authorizeAdmin } = require('../middleware/roleMiddleware');
 const { validationHandler } = require('../middleware/validationHandler');
-const { signupValidators, createCourseValidators, createExamValidators, assignCourseValidators } = require("../utils/validators");
+const { signupValidators, createCourseValidators, createExamValidators, assignCourseValidators, getMemberResultValidators } = require("../utils/validators");
 const router = express.Router();
 
 // Middleware
@@ -20,5 +20,6 @@ router.post('/assign-course', assignCourseValidators, validationHandler, assignC
 router.get('/members', getAllMembers);
 router.get('/courses', getAllCourses);
 router.get('/exams', getAllExams);
+router.get('/result/:memberId/:examId', getMemberResultValidators, validationHandler, getExamResult);
 
 module.exports = router;
